fix white box overflow with position relative

--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,8 @@ h1, h2, h3 {
 
 #content-wrapper {
   height: 200vh;
+  width: 100%;
+  position: relative;
 }
 
 .bg-gradient1 {
